Add Smiley Tree and Smiley Factory upgrades with cost display and purchase functionality

--- a/upgrades.html
+++ b/upgrades.html
@@ -176,7 +176,13 @@
             </div>
         </div>
     </div>
-    
+    <!--SmileyTree-->
+
+    <button id="smileyTreeButton">Smiley-Baum pflanzen (Preis: 50 Smileys)</button>
+
+
+
+
     <!-- Kaufbestätigungsfenster -->
     <div id="kauf_bestaetigung_fenster" class="modal">
         <div class="modal-content">
