Add click upgrades with new functionality and UI elements for enhanced gameplay

--- a/upgrades.html
+++ b/upgrades.html
@@ -124,6 +124,26 @@
             </div>
 
             <div class="upgrade-section">
+                <h2 class="text-xl font-bold">Klick-Upgrades</h2>
+                <p class="text-sm">Verbessert die Effizienz deines Mausklicks.</p>
+                <div class="upgrade-group" id="klick-upgrade-1-group">
+                    <p>Maus-Upgrade: +10% Klick-Effizienz</p>
+                    <p>Kosten: <span id="klick_upgrade_1_kosten" class="font-bold">1000</span> Smileys</p>
+                    <button id="klick_upgrade_1_button" class="upgrade-button">Kaufen</button>
+                </div>
+                <div class="upgrade-group" id="klick-upgrade-2-group">
+                    <p>Doppelklick-Mechanik: +20% Klick-Effizienz</p>
+                    <p>Kosten: <span id="klick_upgrade_2_kosten" class="font-bold">5000</span> Smileys</p>
+                    <button id="klick_upgrade_2_button" class="upgrade-button">Kaufen</button>
+                </div>
+                <div class="upgrade-group" id="klick-upgrade-3-group">
+                    <p>Super-Maus: +50% Klick-Effizienz</p>
+                    <p>Kosten: <span id="klick_upgrade_3_kosten" class="font-bold">25000</span> Smileys</p>
+                    <button id="klick_upgrade_3_button" class="upgrade-button">Kaufen</button>
+                </div>
+            </div>
+
+            <div class="upgrade-section">
                 <h2 class="text-xl font-bold">Auto-Klicker</h2>
                 <p class="text-sm">Sammelt automatisch Smileys für dich.</p>
                 <div class="upgrade-group">
