Add auto-clicker speed upgrade feature with associated UI elements and storage handling

--- a/upgrades.html
+++ b/upgrades.html
@@ -146,6 +146,11 @@
             <div class="upgrade-section">
                 <h2 class="text-xl font-bold">Auto-Klicker</h2>
                 <p class="text-sm">Sammelt automatisch Smileys für dich.</p>
+                <div class="upgrade-group" id="auto_clicker_speed_upgrade_group">
+                    <p>Turbo-Modul: Auto-Klicker sind 2x schneller</p>
+                    <p>Kosten: <span id="auto_clicker_speed_cost" class="font-bold">2000</span> Smileys</p>
+                    <button id="auto_clicker_speed_button" class="upgrade-button">Kaufen</button>
+                </div>
                 <div class="upgrade-group">
                     <p>Kosten: <span id="kosten_1x" class="font-bold">0</span> Smileys</p>
                     <button id="auto_clicker_button_1x" class="upgrade-button">1x Kaufen</button>
