Add new auto-clicker upgrades with associated UI elements and functionality

--- a/upgrades.html
+++ b/upgrades.html
@@ -146,11 +146,47 @@
             <div class="upgrade-section">
                 <h2 class="text-xl font-bold">Auto-Klicker</h2>
                 <p class="text-sm">Sammelt automatisch Smileys für dich.</p>
-                <div class="upgrade-group" id="auto_clicker_speed_upgrade_group">
-                    <p>Turbo-Modul: Auto-Klicker sind 2x schneller</p>
-                    <p>Kosten: <span id="auto_clicker_speed_cost" class="font-bold">2000</span> Smileys</p>
-                    <button id="auto_clicker_speed_button" class="upgrade-button">Kaufen</button>
+                <div class="upgrade-group" id="auto_klicker_upgrade_1_group">
+                    <p>Upgrade 1: Turbo-Modul</p>
+                    <p>Kosten: <span id="auto_klicker_upgrade_1_kosten">2000</span> Smileys</p>
+                    <button id="auto_klicker_upgrade_1_button" class="upgrade-button">Kaufen</button>
                 </div>
+                <div class="upgrade-group" id="auto_klicker_upgrade_2_group">
+                    <p>Upgrade 2: Verstärkte Klicks</p>
+                    <p>Kosten: <span id="auto_klicker_upgrade_2_kosten">8000</span> Smileys</p>
+                    <button id="auto_klicker_upgrade_2_button" class="upgrade-button">Kaufen</button>
+                </div>
+                <div class="upgrade-group" id="auto_klicker_upgrade_3_group">
+                    <p>Upgrade 3: Energiesparmodus</p>
+                    <p>Kosten: <span id="auto_klicker_upgrade_3_kosten">25000</span> Smileys</p>
+                    <button id="auto_klicker_upgrade_3_button" class="upgrade-button">Kaufen</button>
+                </div>
+                <div class="upgrade-group" id="auto_klicker_upgrade_4_group">
+                    <p>Upgrade 4: Präzisions-Mikrochips</p>
+                    <p>Kosten: <span id="auto_klicker_upgrade_4_kosten">100000</span> Smileys</p>
+                    <button id="auto_klicker_upgrade_4_button" class="upgrade-button">Kaufen</button>
+                </div>
+                <div class="upgrade-group" id="auto_klicker_upgrade_5_group">
+                    <p>Upgrade 5: Multitasking-Software</p>
+                    <p>Kosten: <span id="auto_klicker_upgrade_5_kosten">500000</span> Smileys</p>
+                    <button id="auto_klicker_upgrade_5_button" class="upgrade-button">Kaufen</button>
+                </div>
+                <div class="upgrade-group" id="auto_klicker_upgrade_6_group">
+                    <p>Upgrade 6: Fließband-Optimierung</p>
+                    <p>Kosten: <span id="auto_klicker_upgrade_6_kosten">2000000</span> Smileys</p>
+                    <button id="auto_klicker_upgrade_6_button" class="upgrade-button">Kaufen</button>
+                </div>
+                <div class="upgrade-group" id="auto_klicker_upgrade_7_group">
+                    <p>Upgrade 7: Quanten-Beschleuniger</p>
+                    <p>Kosten: <span id="auto_klicker_upgrade_7_kosten">8000000</span> Smileys</p>
+                    <button id="auto_klicker_upgrade_7_button" class="upgrade-button">Kaufen</button>
+                </div>
+                <div class="upgrade-group" id="auto_klicker_upgrade_8_group">
+                    <p>Upgrade 8: Ewige Batterie</p>
+                    <p>Kosten: <span id="auto_klicker_upgrade_8_kosten">25000000</span> Smileys</p>
+                    <button id="auto_klicker_upgrade_8_button" class="upgrade-button">Kaufen</button>
+                </div>
+
                 <div class="upgrade-group">
                     <p>Kosten: <span id="kosten_1x" class="font-bold">0</span> Smileys</p>
                     <button id="auto_clicker_button_1x" class="upgrade-button">1x Kaufen</button>
