Add info page with gameplay tips and navigation links

--- a/einstellungen.html
+++ b/einstellungen.html
@@ -86,6 +86,7 @@
             <a href="index.html">Startseite</a>
             <a href="upgrades.html">Upgrades</a>
             <a href="einstellungen.html">Einstellungen</a>
+            <a href="info.html">Info & Tipps</a>
         </nav>
     </div>
 
