--- a/index.html
+++ b/index.html
@@ -98,6 +98,7 @@
             <a href="index.html">Startseite</a>
             <a href="upgrades.html">Upgrades</a>
             <a href="einstellungen.html">Einstellungen</a>
+            <a href="info.html">Info</a>
         </nav>
     </div>
 
