Fix: Update header titles for consistency and clarity in index and upgrades pages

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         </nav>
     </header>
     <main class="container">
-        <h1>Dein Smiley-Klicker</h1>
+        <h1>Smiley Clicker</h1>
         <div class="info-box">
             <p>Aktuelle Smileys: <span id="aktuelle_smileys">0</span></p>
             <p>Gesammelte Smileys: <span id="gesammelte_smileys">0</span></p>
