Fix: Remove unused volume variable from localStorage and update research lab description for clarity

--- a/upgrades.html
+++ b/upgrades.html
@@ -26,7 +26,7 @@
             <div class="forschungslabor-container">
                 <div class="upgrade-container">
                     <h3>Forschungslabor (<span id="forschungslabor_count_anzeige">0</span>)</h3>
-                    <p>Generiert Forschungspunkte, die für mächtige Upgrades auf der Prestige-Ebene verwendet werden.</p>
+                    <p>Generiert Forschungspunkte, die für mächtige Upgrades benutzt werden.</p>
                     <div class="kosten-container">
                         <button id="forschungslaborButton">Kaufen (5000 Smileys)</button>
                     </div>
@@ -174,6 +174,20 @@
                 </div>
             </div>
         </div>
+            
+        <div class="upgrade-container" id="forschungslabor_container">
+    <div class="upgrade-group">
+        <div class="upgrade-info">
+            <h3 class="upgrade-name">Forschungslabor</h3>
+            <p class="upgrade-description">Generiert automatisch 0.2 Forschungspunkte pro Sekunde.</p>
+        </div>
+        <div class="upgrade-cost-group">
+            <p>Kosten: 2.500 Smileys</p>
+            <button id="ForschungsLaborButton">Kaufen</button>
+        </div>
+    </div>
+</div>
+
     </main>
     <script src="script.js"></script>
 </body>
