Fix: Update display text for clarity and adjust click value calculation in game logic

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <p>Aktuelle Smileys: <span id="aktuelle_smileys">0</span></p>
             <p>Gesammelte Smileys: <span id="gesammelte_smileys">0</span></p>
             <p>Smileyverse-Punkte: <span id="smiley_points">0</span></p>
-            <p>Multiplikator pro Klick: <span id="multiplikator_per_click">1</span></p>
+            <p>Smileys pro Klick: <span id="multiplikator_per_click">1</span></p>
         </div>
         <button id="smiley_button" class="smiley-button">😊</button>
         <div class="info-box">
